fix font size of details on mobile

--- a/client/containers/DashboardMembers/dashboardMembers.scss
+++ b/client/containers/DashboardMembers/dashboardMembers.scss
@@ -7,6 +7,13 @@ $mobile-viewport-cutoff: 750px;
 }
 
 .dashboard-members-container {
+	.dashboard-header-left {
+		@include mobile {
+			.details {
+				font-size: 14px;
+			}
+		}
+	}
 	.settings-section-component {
 		margin: 2em 0em 4em;
 		@include mobile {
